--- a/15_Ansible_test/ansible_roles_test/roles/ntp_install/tasks/main.yml
+++ b/15_Ansible_test/ansible_roles_test/roles/ntp_install/tasks/main.yml
@@ -16,5 +16,6 @@
               state: latest
         - name: Replace ntp default config
           template:
-              src: data/nginx.conf
+              src: files/nginx.conf
               dest: /etc/nginx/nginx.conf
+
